# trim-history

./: Cargo.toml  LICENSE  README.md
src/: config.rs  files.rs  functions.rs  main.rs  trimmer.rs
